src/main/java/com/example/finalprojectdtomarket/errors/exception/Exception401.java
package com.example.finalprojectdtomarket.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }
}
